CSS general casi terminado

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="nomostrar"></div>
                 <div class="inicio">
-                    <div><a href="">Inicia sesión</a></div>
+                    <div><a href="">Login</a></div>
                 </div>
                 <div class="registro">
                     <div><a href="">Registrate</a></div>
@@ -158,17 +158,17 @@
             </div>
             <!--Contenido de la página-->
             <div class="contenido">
+                <h2>History</h2>
+                <hr>
                 <div class="content1">
-                    <h2>History</h2>
-                    <hr>
                     <h3>Initial Release</h3>
                     <p>On September 5, 2020, the Project SEKAI Colorful Stage! Rehearsal Edit was released; it showcased the rhythm game itself, along with the Virtual Live room, where players were able to interact with one another. The Rehearsal Edit featured three songs; Hibana -Reloaded-, Sweet Magic, and Tell Your World, each having all five levels of beatmap difficulty. The demo ended on September 11th, 2020, and has not been playable since then. The game was released on September 30, 2020. Pre-registration was originally set to begin in late April but was delayed until further notice due to the COVID-19 pandemic. In the fifth Project SEKAI livestream, it was announced pre-registration will start on July 22. Because various preregistration milestones were reached, there would be rewards for everyone who downloaded the game from then on.</p>
                     <h3>International Release</h3>
                     <p>Prior to the Japanese release of Project SEKAI, a statement for "fans outside of Japan" was made on the game's Twitter account, confirming that there were no plans for a simultaneous worldwide release of the game. However, "overseas versions" of the game were teased, and international fans were told to "stay tuned". These "overseas versions" would later result in the release four different localised versions of Project SEKAI, making the game accessible to international players in Chinese, English and Korean.</p>
                 </div>
+                <h2>Localisation and Worldwide Releases</h2>
+                <hr>
                 <div class="content2">
-                    <h2>Localisation and Worldwide Releases</h2>
-                    <hr>
                     <h3>Taiwanese version</h3>
                     <p>世界計畫 繽紛舞台！feat. 初音未來 (Pinyin: Shìjiè Jìhuà Bīnfēn Wǔtái feat. Chūyīn Wèilái, English: SEKAI Project Colorful Stage! feat. Hatsune Miku), is the Taiwanese version of Project SEKAI, published by Nuverse (Hong Kong) Limited. It is often called the "Taiwanese Server" or simply "TW", and is officially referred to as the "Asian Edition". The Taiwanese server is localised into Traditional Chinese, and is available only in Taiwan, Hong Kong and Macau.</p>
                     <h4>Pre-release</h4>
@@ -196,53 +196,67 @@
                     <h3>Chinese Version</h3>
                     <p>On September 30, 2024, pre-registration for the Chinese server opened and was available for players in mainland China. A gacha-style event was held to commemorate the occasion, with possible prizes being a Playstation 5, Nintendo Switch, Hatsune Miku merchandise, or Project SEKAI merchandise. From December 6 to December 20, the server was open for beta testing on Android devices. It is expected to release on March 27, 2025.</p>
                 </div>
+                <h2>Story</h2>
+                <hr>
                 <div class="content3">
-                    <h2>Story</h2>
-                    <hr>
-                    <img src="" alt="">
-                    <p>The game is set in Shibuya, Tokyo. A girl named Hoshino Ichika walks through the streets and sees an LCD screen displaying Hatsune Miku. Upon returning home, she discovers a song named "Untitled" on her smartphone. Out of curiosity, Ichika plays the song, only to be surrounded by a white light and transported to an unknown place. Miku stands in front of Ichika, welcoming her to SEKAI and inviting her to sing together.</p>
+                    <div class="a1">
+                    <img src="imgs/Beyond_The_Sky.jpg" alt="">
+                    <p>Ichika looking up at Miku.</p>
+                    </div>
+                    <div class="a2">
+                    <p>The game is set in Shibuya, Tokyo. A girl named Hoshino Ichika walks through the streets and sees an LCD screen displaying Hatsune Miku.</p>
+                    <p>Upon returning home, she discovers a song named "Untitled" on her smartphone. Out of curiosity, Ichika plays the song, only to be surrounded by a white light and transported to an unknown place. Miku stands in front of Ichika, welcoming her to SEKAI and inviting her to sing together.</p>
+                    </div>
                 </div>
+                <h2>Characters</h2>
+                <hr>
                 <div class="content4">
-                    <h2>Characters</h2>
-                    <hr>
                     <h3>VIRTUAL SINGER</h3>
                     <p>The game features Crypton's Piapro characters: Hatsune Miku, Kagamine Rin, Kagamine Len, Megurine Luka, KAITO, and MEIKO. These characters take the form of VIRTUAL SINGERS (also known as VOCALOIDS).</p>
                     <h3>Groups</h3>
                     <p>The game features 20 new characters that are split into 5 units: Leo/need, MORE MORE JUMP!, Vivid BAD SQUAD, Wonderlands x Showtime, and 25-ji, Nightcord de. Each of the units has one or more VIRTUAL SINGERS advising them.</p>
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <table>
+                        <tr>
+                            <th><a href=""><img src="imgs/Virtualsingerlogo.jpg" alt="">VIRTUAL SINGER</a></th>
+                            <th><a href=""><img src="imgs/Leoneedlogo.jpg" alt="">Leo/need</a></th>
+                            <th><a href=""><img src="imgs/Moremorejumplogo.jpg" alt="">MORE MORE JUMP!</a></th>
+                        </tr>
+                        <tr>
+                            <th><a href=""><img src="imgs/Vividbadsquadlogo.jpg" alt="">Vivid BAD SQUAD</a></th>
+                            <th><a href=""><img src="imgs/Wonderlandsxswowtimelogo.jpg" alt="">Wonderlands X Showtime</a></th>
+                            <th><a href=""><img src="imgs/25ji-logo.jpg" alt="">25-ji, Nightcord de.</a></th>
+                        </tr>
+                    </table>
                 </div>
+                <h2>System</h2>
+                <hr>
                 <div class="content5">
-                    <h2>System</h2>
-                    <hr>
                     <h3>Real World and SEKAI</h3>
+                    <img class="b1" src="imgs/Chatting.jpg" alt="">
                     <p>Players can switch between locations in the real world and SEKAI. You can travel between the two worlds using "Untitled" songs.</p>
                     <p>Conversations are voiced and animated using Live2D.</p>
-                    <img src="" alt="">
+                    <h3>New Rhythm Game System</h3>
                     <p>Players have to tap, slide, flick, and trace to match new free-form rhythm notes. Colorful Palette wanted to create a game everyone could play, regardless of skill.</p>
+                    <img class="b2" src="imgs/Gameplay.jpg" alt="">
                     <p>The game features many VOCALOID songs. Players can switch between the original VOCALOID versions and SEKAI versions, sung by the game's characters.</p>
-                    <img src="" alt="">
+                    <img class="b3" src="imgs/2dmv.jpg" alt="">
                     <p>A static background containing the cover of the song is available on all songs, but some songs may have a 2DMV, a 3DMV, or an original MV that can be switched by the player.</p>
-                    <img src="" alt="">
+                    <img class="b4" src="imgs/Alive_preview.jpg" alt="">
                     <p>A list of currently playable songs can be found here. New songs are being added on a regular basis, with covers of classic VOCALOID songs as well as new songs commissioned for the game.</p>
                     <p>On February 25, 2020, the first Project SEKAI Song Contest was held, the winning song appearing in the game. Submissions were open until April 30, 2020, and the results of the contest were revealed at the first Project SEKAI livestream.</p>
                     <p>The winner of the first song contest was Ichinose Lupo, with the song alive, sung by Kagamine Rin. Song contests are still being held, and there are currently more than 40 contest winning songs playable in-game.</p>
                 </div>
+                <h2>Costumes</h2>
+                <hr>
                 <div class="content6">
-                    <h2>Costumes</h2>
-                    <hr>
+                    <img class="c1" src="imgs/Outfits.jpg" alt="">
                     <p>There are a variety of wearable costumes available in Project SEKAI, along with color variations. A full list of costumes can be found here. Costumes can be obtained through purchasing a Premium Mission Pass or by pulling a 4✰ card from the gacha.</p>
-                    <img src="" alt="">
                     <p>In November 2019, the first costume design contest was held. Two designs, one for girls and one for boys. are chosen in each contest to appear in-game. The winners of the first costume contest were Hibi Hana with Cheerful Chick Dress and Ei-Flow with Starlight.</p>
                     <p>Costume design contests are held every month. These costumes can be purchased using paid crystals or real-life currency.</p>
                 </div>
+                <h2>Gameplay</h2>
+                <hr>
                 <div class="content7">
-                    <h2>Gameplay</h2>
-                    <hr>
                     <p>Project SEKAI includes multiple types of lives, the main two being Solo Lives and Multi Lives. To participate in a live, you will need to build a team using five cards of any of the 26 playable characters. A player's team cannot contain more than one card of a certain playable character except during Challenge Lives. There are four note types in game: flick notes, tap notes, hold notes, and trace notes.</p>
                     <h3>Solo Live</h3>
                     <p>In a Solo Live, you can choose any song along with the vocals for that song, whether if it's the VIRTUAL SINGER, SEKAI, or Another Vocal (also called "Cover") version.</p>
@@ -272,28 +286,57 @@
                     <p>On September 30, 2023, Project SEKAI's third anniversary, Append was introduced as the sixth difficulty, with a range of 23 - 38, which features charts meant to be played with more than three fingers. The difficulty numbering of Append charts is different from the other five difficulties, so an APD prefix is used in-game. Currently, there are no charts with a difficulty level of APD23 or APD38.</p>
                     <p>Initially, 13 songs were selected to be added with an Append chart. Since the release of this difficulty level, at least one to three currently in-game songs have been selected to be added with an Append chart each month.</p>
                 </div>
+                <h2>Virtual Live</h2>
+                <hr>
                 <div class="content8">
-                    <h2>Virtual Live</h2>
-                    <hr>
-                    <img src="" alt="">
-                    <img src="" alt="">
+                    <img class="d1" src="imgs/Virtual_Live.jpg" alt="">
                     <p>A Virtual Live is a digital live concert using 3D models, similar to Augmented Reality (AR) or a Vocaloid Concert.</p>
                     <p>Watch your favorite groups perform with fellow players from all around the world. Encourage the performers with your penlight and items.</p>
+                    <img class="d2" src="imgs/Virtual_room.jpg" alt="">
                     <p>Before a live starts, you can talk with other players in the lobby using chat and emotes. The lobby contains the Virtual Shop where you can buy avatar costumes, penlights, and actions. Avatar changes must be done before entering the live room.</p>
                     <p>15 minutes before a live begins, the live room will open. The live will start at the hour displayed on the ticket in the Virtual Live menu. In the live room, you can send items, use emotes, change the color of your penlight, and perform actions. When the live has finished, you can leave and claim rewards from attending the live.</p>
                 </div>
+                <h2>External Links</h2>
+                <hr>
                 <div class="content9">
-                    <h2>External Links</h2>
-                    <hr>
                     <p>Japanese</p>
                     <ul>
-                        <li>Official Website</li>
-                        <li>Official Twitter</li>
-                        <li>Oficcial Youtube Channel</li>
+                        <li><a href="">Official Website</a></li>
+                        <li><a href="">Official Twitter</a></li>
+                        <li><a href="">Oficcial Youtube Channel</a></li>
                     </ul>
                     <p>Global</p>
                     <ul>
-                        <li></li>
+                        <li><a href="">Official Website</a></li>
+                        <li><a href="">Official Twitter</a></li>
+                        <li><a href="">Official Youtube Channel</a></li>
+                        <li><a href="">Official Instagram</a></li>
+                        <li><a href="">Official Facebook</a></li>
+                        <li><a href="">Official Twitch Channel</a></li>
+                    </ul>
+                    <p>Taiwanese</p>
+                    <ul>
+                        <li><a href="">Official Website</a></li>
+                        <li><a href="">Official Youtube Channel</a></li>
+                        <li><a href="">Official Instagram</a></li>
+                        <li><a href="">Official Facebook</a></li>
+                    </ul>
+                    <p>Korean</p>
+                    <ul>
+                        <li><a href="">Official Website</a></li>
+                        <li><a href="">Official Twitter</a></li>
+                        <li><a href="">Official Youtube Channel</a></li>
+                        <li><a href="">Official Facebook</a></li>
+                        <li><a href="">Official Naver</a></li>
+                        <li><a href="">Official TikTok</a></li>
+                    </ul>
+                    <p>Chinese</p>
+                    <ul>
+                        <li><a href="">Official Website</a></li>
+                        <li><a href="">Official Bilibili</a></li>
+                        <li><a href="">Official TapTap</a></li>
+                        <li><a href="">Official Weibo</a></li>
+                        <li><a href="">Official Douyin</a></li>
                     </ul>
                 </div>
             </div>
