--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <h4>Exclusive Content</h4>
                     <p>Several exclusive songs would be added to the English server, many of which making their way to other server</p>
                     <h4>"Revival my dream" cancellation</h4>
-                    <p>On September 23, 2022, it was announced that the "<a href="" class="pi">Revival my dream</a>" event would be skipped on the English server, due to the inclusion of "expressions deemed inappropriate in general for the game". This included it's associated <a href="">story</a>, <a href="">gacha</a>, and cards. Though compensation for the event's cancellation were prepared in the form of in-game gifts and additional content, this decision proved controversial among players. On September 30, 2022, it would be clarified that the commissioned song associated with the event would still be available, and that there were no plans to cancel any future content from the Japanese server.</p>
+                    <p>On September 23, 2022, it was announced that the "<a href="" class="pi">Revival my dream</a>" event would be skipped on the English server, due to the inclusion of "expressions deemed inappropriate in general for the game". This included it's associated <a href="" class="pi">story</a>, <a href="" class="pi">gacha</a>, and cards. Though compensation for the event's cancellation were prepared in the form of in-game gifts and additional content, this decision proved controversial among players. On September 30, 2022, it would be clarified that the commissioned song associated with the event would still be available, and that there were no plans to cancel any future content from the Japanese server.</p>
                     <h4>South-East Asian Release</h4>
                     <p>While South-East Asia was initially planned to receive the Taiwanese "Asian Edition" of the game, official social media accounts announced on September 23, 2023 that South-East Asia would be receiving the global server on September 25, 2023.</p>
                     <h3>Korean Version</h3>
@@ -244,18 +244,14 @@
                     <p>The game features Crypton's Piapro characters: <a href="" class="miku">Hatsune Miku</a>, <a href="" class="rin">Kagamine Rin</a>, <a href="" class="len">Kagamine Len</a>, <a href="" class="luka">Megurine Luka</a>, <a href="" class="kaito">KAITO</a>, and <a href="" class="meiko">MEIKO</a>. These characters take the form of <a href="" class="vs">VIRTUAL SINGERS</a> (also known as <a href="" class="pi">VOCALOIDS</a>).</p>
                     <h3>Groups</h3>
                     <p>The game features 20 new characters that are split into 5 units: <a href="" class="ln">Leo/need</a>, <a href="" class="mmj">MORE MORE JUMP!</a>, <a href="" class="vbs">Vivid BAD SQUAD</a>, <a href="" class="wxs">Wonderlands x Showtime</a>, and <a href="" class="niigo">25-ji, Nightcord de.</a> Each of the units has one or more VIRTUAL SINGERS advising them.</p>
-                    <table>
-                        <tr>
-                            <th><a href="" class="vs"><img src="imgs/Virtualsingerlogo.jpg" alt="">VIRTUAL SINGER</a></th>
-                            <th><a href="" class="ln"><img src="imgs/Leoneedlogo.jpg" alt="">Leo/need</a></th>
-                            <th><a href="" class="mmj"><img src="imgs/Moremorejumplogo.jpg" alt="">MORE MORE JUMP!</a></th>
-                        </tr>
-                        <tr>
-                            <th><a href="" class="vbs"><img src="imgs/Vividbadsquadlogo.jpg" alt="">Vivid BAD SQUAD</a></th>
-                            <th><a href="" class="wxs"><img src="imgs/Wonderlandsxswowtimelogo.jpg" alt="">Wonderlands X Showtime</a></th>
-                            <th><a href="" class="niigo"><img src="imgs/25ji-logo.jpg" alt="">25-ji, Nightcord de.</a></th>
-                        </tr>
-                    </table>
+                    <div class="grupos">
+                            <a href="" class="vs" style="text-decoration: none"><img src="imgs/Virtualsingerlogo.jpg" alt="">VIRTUAL SINGER</a>
+                            <a href="" class="ln" style="text-decoration: none"><img src="imgs/Leoneedlogo.jpg" alt="">Leo/need</a></th>
+                            <a href="" class="mmj" style="text-decoration: none"><img src="imgs/Moremorejumplogo.jpg" alt="">MORE MORE JUMP!</a>
+                            <a href="" class="vbs" style="text-decoration: none"><img src="imgs/Vividbadsquadlogo.jpg" alt="">Vivid BAD SQUAD</a>
+                            <a href="" class="wxs" style="text-decoration: none"><img src="imgs/Wonderlandsxswowtimelogo.jpg" alt="">Wonderlands X Showtime</a>
+                            <a href="" class="niigo" style="text-decoration: none"><img src="imgs/25ji-logo.jpg" alt="">25-ji, Nightcord de.</a>
+                    </div>
                 </div>
                 <h2>System</h2>
                 <hr>
