--- a/index.html
+++ b/index.html
@@ -361,6 +361,7 @@
                         <li><a href="https://space.bilibili.com/3546749308242173" class="pi">Official Bilibili</a></li>
                         <li><a href="https://www.taptap.cn/app/223265?utm_medium=rep&utm_source=rep_geqxeejybid" class="pi">Official TapTap</a></li>
                         <li><a href="https://weibo.com/u/7944879913" class="pi">Official Weibo</a></li>
+                        <li><a href="">Link añadido</a></li>
                     </ul>
                 </div>
             </div>
